--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,32 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 
 }
 
+
+#chat {
+    height:600px;
+    width:980px;
+    margin-bottom:50px;
+    padding:20px;
+    display: none;
+}
+#chatbody{
+    
+    height:90%;
+    
+}
+#chat ul {}
+#users {
+    background: white; height:100%; float:left; list-style: none; overflow-y: scroll; margin:0; padding: 0;
+    float:right; width: 20%}
+#chatbox {
+    background: rgba(255,255,255,.75); height:100%; float:left; list-style: none; overflow: scroll; margin:0; padding: 0;
+    padding-left:10px;
+    border: 1px solid black;
+    width:80%;
+}
+#chatbox li { font-size:11pt; border-bottom: 1px solid #ccc; padding:2px 0;  margin-bottom:2px;}
+#chatbody input {width:100%; height: 3em; padding: .5em; width:99%;}
+#chatbody em { color:#ddd;}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
