--- a/css/main.css
+++ b/css/main.css
@@ -181,25 +181,40 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
     margin-bottom:50px;
     padding:20px;
     display: none;
+    border: 1px solid #eee;
+    box-shadow: 0 0 50px 20px black;
 }
 #chatbody{
     
     height:90%;
     
 }
+#login {box-shadow: 0 0 50px 10px black;}
 #chat ul {}
 #users {
     background: white; height:100%; float:left; list-style: none; overflow-y: scroll; margin:0; padding: 0;
-    float:right; width: 20%}
+    float:right; width: 20%;
+    background: rgba(255,255,255,.75);
+    padding:5px;
+    font-weight: bold;
+    font-size: 75%;
+    padding-left: 10px;
+    border: 2px solid black;
+    border-left: none;
+    }
 #chatbox {
     background: rgba(255,255,255,.75); height:100%; float:left; list-style: none; overflow: scroll; margin:0; padding: 0;
     padding-left:10px;
-    border: 1px solid black;
+    border: 2px solid black;
     width:80%;
+    overflow-x: hidden;
+
 }
 #chatbox li { font-size:11pt; border-bottom: 1px solid #ccc; padding:2px 0;  margin-bottom:2px;}
 #chatbody input {width:100%; height: 3em; padding: .5em; width:99%;}
-#chatbody em { color:#ddd;}
+#chatbody em { color:#444;}
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
