--- a/css/main.css
+++ b/css/main.css
@@ -202,7 +202,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
     border: 2px solid black;
     border-left: none;
     }
-#chatbox {
+#chatbox ul{
     background: rgba(255,255,255,.75); height:100%; float:left; list-style: none; overflow: scroll; margin:0; padding: 0;
     padding-left:10px;
     border: 2px solid black;
@@ -210,9 +210,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
     overflow-x: hidden;
 
 }
-#chatbox li { font-size:11pt; border-bottom: 1px solid #ccc; padding:2px 0;  margin-bottom:2px;}
+#chatbox ul li { font-size:11pt; border-bottom: 1px solid #ccc; padding:2px 0;  margin-bottom:2px;}
 #chatbody input {width:100%; height: 3em; padding: .5em; width:100%;}
-#chatbody em { color:#444;}
+#chatbody em { color:#999;}
+#chatbox {height:600px; overflow-y: scroll;}
 
 .dev-1 {color:blue; font-weight:normal}
 .dev-2 {color:red; font-weight:normal}
@@ -226,8 +227,6 @@ margin: 0; overflow: auto; float:left; color:white;
 margin-top: -12px; padding:0;}
 #chatrooms li {float:left; border:1px solid white;float: left;
     overflow: auto; padding:4px; }
-
-
 /* ==========================================================================
    Helper classes
    ========================================================================== */
