--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ body {
     background: black;
 }
 
-* {box-sizing: border-box;}
+* {box-sizing: border-box ;-moz-box-sizing:border-box;}
 
 .container {
     width: 980px;
@@ -216,7 +216,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 
 }
 #chatbox ul li { font-size:11pt; border-bottom: 1px solid #ccc; padding:2px 0;  margin-bottom:2px;}
-#chat input {width:100%; height: 3em; padding: .5em; width:100%;}
+#chat input {width:100%; height: 3em; padding: .5em; width:100%; border: 1px ridge rgba(50,50,50, .3)}
 #chatbody em { color:#999;}
 #chatform {
     float: left;
