--- a/css/main.css
+++ b/css/main.css
@@ -94,18 +94,27 @@ textarea {
    ========================================================================== */
 
 
+#wrapper {
+    
+    overflow-y:hidden;
+    overflow-x: hidden;
+    height:100%;
+    width:100%;
+}
 
 
-
-body {
-    background: black;
+html,body {
+    height:100%;
 }
 
 * {box-sizing: border-box ;-moz-box-sizing:border-box;}
 
 .container {
     width: 980px;
-    margin: 0 auto;
+    margin: 300px auto;
+    float:left ;
+    margin:50px 80px;
+    margin-top:150px;
 }
 
 .transparent {
@@ -113,7 +122,7 @@ body {
     border-radius: 20px;
     height:300px;
     width:300px;
-    margin:0 auto;
+    
     margin-top: 150px;
     padding:0;
     
@@ -173,9 +182,18 @@ background: linear-gradient(to bottom,  rgba(0,0,0,1) 0%,rgba(96,96,96,1) 62%,rg
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000',GradientType=0 );
 
 }
+
+#stats {
+    padding: 30px;
+    width: 90%;
+    border: 1px solid black;
+    margin: 0 auto;
+}
+
+
 #duelrooms{
     height:600px;
-    width:980px;
+    width:1200px;
     margin-bottom:50px;
     padding:20px;
     display: none;
@@ -195,7 +213,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 #roomlist{
     float:left;
     height:100%;
-    width:80%;
+    width:70%;
     background:none;
 
 }
@@ -303,6 +321,34 @@ border: none !important;
 
 }
 .roomstarted{display: none;}
+#room-controls {
+    float: right;
+    width: 28%;
+    border: 1px solid white;
+    box-shadow: 0 0 50px black;
+    border-radius: 15px;
+    background: rgba(255,255,255,.5);
+    height:250px;
+    height:90%;
+}
+
+nav {
+    position:fixed;
+    bottom:0;
+    height:100px;
+    width:100%;
+}
+nav .content {
+    background: rgba(0,0,0, .3);
+    color:white;
+    width:1024px;
+    margin: 0 auto;
+    overflow: auto;
+    height:2.5em;
+}
+nav ul {margin:0 auto; padding:0; width: 90%;; text-align: center;}
+nav ul li {float:left;display:inline; margin:.5em 2em;}
+nav a,nav a:link,nav a:visited, nav a:hover, nav a:active {color:white; text-decoration: none;}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
